--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   </table>
 </div>
 -->
-<script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+<script src="http://apps.bdimg.com/libs/jquery/1.9.1/jquery.min.js"></script>
 <script>
 function DatePick($target){
   this.init($target);
